test/positive/feature_publicmethods.java

public class feature_publicmethods {
  public feature_publicmethods() {}
  public int m() {
    return 42;
  }
}

