test/negative/feature_synchronized.java

  public class feature_synchronized {
    public feature_synchronized() {}
    public synchronized int m() {
      return 42;
    }
  }

